Fix the not shared icon to not be too wide.

--- a/public/less/utils.less
+++ b/public/less/utils.less
@@ -151,7 +151,7 @@
 .notSharedIcon
 {
     display : block;
-    width: 16px;
+    width: 15px;
     height: 16px;
     background-image: url(/img/notshared.png);
 }
