--- a/public/less/verification.less
+++ b/public/less/verification.less
@@ -1,6 +1,6 @@
 .box.verificationBox{
     text-align : center;
-    padding: 120px 0px;
+    padding: 164px 0px;
 }
 .verificationContainer{
     margin: 0 auto;
